# birdsong

./: .gitignore  8BAND_ELI5.md  BIO_SCALING.md  BITMAP_POC.md  CLAUDE.md  DEV_NOTES.md  FFT_PEAK_DETECTION_ANALYSIS_2025-07-27.md  FREQUENCY_SWEEPS_SUMMARY.md  README.md  birdsong.py  birdsong_2band.py  birdsong_4band.py  birdsong_8band.py  birdsong_bitmap.py  birdsong_fsk_sweeps.py  birdsong_sweeps.py  birdsong_sweeps_4sym.py  birdsong_sweeps_8sym.py  debug.py  debug_payload.py  frequency_analysis.py  generate_spectrogram.py  justfile  modem.py  play.py  pyproject.toml  sing.py  test-recording.sh  test_bit_conversion.py
.claude/: settings.local.json
archive/challenge/: DEV_NOTES.md  README.md  modem.py
archive/challenge/course_material/: CLAUDE.md  README.md
archive/history/: README.md  poc.py
challenge/: CHALLENGE.md  modem.py
docs/project_archived/: chore_cleanup_untracked_files.md
docs/project_notes/: bitmap_rebuild_ticket.md  bugs.md  decisions.md  key_facts.md  restructure_plan.md
experiments/: README.md
experiments/active/: README.md  birdsong_8band.py  birdsong_bitmap_v2.py  birdsong_fsk_sweeps.py
experiments/active/bitmap_v2_results/: FINDINGS.md  robustness_sweep.py  sweep_output.txt
experiments/archive/: README.md  birdsong_2band.py  birdsong_4band.py  birdsong_bitmap.py  birdsong_sweeps.py  birdsong_sweeps_4sym.py  birdsong_sweeps_8sym.py
tests/: test_birdsong_core.py  test_bitmap_v2.py  test_cli_smoke.py
tools/: debug.py  demo_app.py  play.py  test-recording.sh
