[project]
name = "birdsong"
version = "0.1.0"
description = "Acoustic modem experiments centered on a simple FSK birdsong modem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "sounddevice>=0.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
